--- a/src/app/go-over/components/go-over-view/go-over-view.component.html
+++ b/src/app/go-over/components/go-over-view/go-over-view.component.html
@@ -1,14 +1,14 @@
 <div class="content">
     <div class="row">
-        <div class="col">
+        <div id="primero" class="col">
             <div class="card h-100">
-                <div class="card-header">                    
+                <div class="card-header">
                     <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>La Guía Scrum</h4>
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text">La Guía Definitiva de Scrum: Las Reglas del Juego</p>
-                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
-                     class="btn btn-success">Ver documento</a>
+                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf"
+                        target="_blank" class="btn btn-success">Ver documento</a>
                 </div>
                 <div class="card-footer text-body-secondary">
                     <span id="footer-card-go-over">Fecha de publicación: Noviembre 2020</span>
@@ -17,28 +17,30 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <div class="card-header">                    
+                <div class="card-header">
                     <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Todo Scrum 2021</h4>
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text">Un resumen para ser un Scrum Master</p>
-                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
-                     class="btn btn-success">Ver documento</a>
+                    <a href="https://agilpm.com/guia-scrum-agilpm_2019.pdf" target="_blank" class="btn btn-success">Ver
+                        documento</a>
                 </div>
                 <div class="card-footer text-body-secondary">
                     <span id="footer-card-go-over">Fecha de publicación: 2021</span>
                 </div>
             </div>
         </div>
-        <div class="col">
+    </div>
+    <div class="row mt-3" style="margin-top: 10px;">
+        <div id="primero" class="col">
             <div class="card h-100">
-                <div class="card-header">                    
+                <div class="card-header">
                     <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Scrum Master</h4>
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text">Temario troncal 1 Versión 3</p>
-                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
-                     class="btn btn-success">Ver documento</a>
+                    <a href="https://www.scrummanager.com/files/scrum_master.pdf" target="_blank"
+                        class="btn btn-success">Ver documento</a>
                 </div>
                 <div class="card-footer text-body-secondary">
                     <span id="footer-card-go-over">Fecha de publicación: febrero 2022</span>
@@ -47,15 +49,15 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <div class="card-header">                    
+                <div class="card-header">
                     <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Una Introducción a
                         Scrum</h4>
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text">Estamos perdiendo la carrera de
                         relevos</p>
-                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
-                     class="btn btn-success">Ver documento</a>
+                    <a href="https://www.dc.fi.udc.es/~cabalar/md/scrum.pdf" target="_blank" class="btn btn-success">Ver
+                        documento</a>
                 </div>
                 <div class="card-footer text-body-secondary">
                     <span id="footer-card-go-over">Fecha de publicación: Noviembre 2013</span>
@@ -63,16 +65,16 @@
             </div>
         </div>
     </div>
-    <div class="row mt-5">
-        <div class="col">
+    <div class="row mt-3" style="margin-top: 10px;">
+        <div id="primero" class="col">
             <div class="card h-100">
-                <div class="card-header">                    
+                <div class="card-header">
                     <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Scrum Manager</h4>
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text">Guía de formación Versión 2.6</p>
-                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
-                     class="btn btn-success">Ver documento</a>
+                    <a href="https://www.scrummanager.com/files/sm_proyecto.pdf" target="_blank"
+                        class="btn btn-success">Ver documento</a>
                 </div>
                 <div class="card-footer text-body-secondary">
                     <span id="footer-card-go-over">Fecha de publicación: Julio 2016</span>
@@ -81,29 +83,32 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <div class="card-header">                    
-                    <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Estudio de metodologías ágiles</h4>
+                <div class="card-header">
+                    <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Estudio de
+                        metodologías ágiles</h4>
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text">Aplicacion de estudio SCRUM</p>
-                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
-                     class="btn btn-success">Ver documento</a>
+                    <a href="https://idus.us.es/bitstream/handle/11441/101313/TFG-2513%20TORRADO%20NEVADO.pdf?sequence=1&isAllowed=y"
+                        target="_blank" class="btn btn-success">Ver documento</a>
                 </div>
                 <div class="card-footer text-body-secondary">
                     <span id="footer-card-go-over">Fecha de publicación: 2019</span>
                 </div>
             </div>
         </div>
-        <div class="col">
+    </div>
+    <div class="row mt-3" style="margin-top: 10px;">
+        <div id="primero" class="col">
             <div class="card h-100">
-                <div class="card-header">                    
+                <div class="card-header">
                     <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Scrum</h4>
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text">El revolucionario método para trabajar
                         el doble en la mitad de tiempo</p>
-                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
-                     class="btn btn-success">Ver documento</a>
+                    <a href="https://proassetspdlcom.cdnstatics2.com/usuaris/libros_contenido/arxius/39/38815_Scrum.pdf"
+                        target="_blank" class="btn btn-success">Ver documento</a>
                 </div>
                 <div class="card-footer text-body-secondary">
                     <span id="footer-card-go-over">Fecha de publicación: octubre 2018</span>
@@ -112,14 +117,14 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <div class="card-header">                    
+                <div class="card-header">
                     <h4 id="header-card-go-over"><i class="fa-solid fa-book-bookmark mod-icon"></i>Metodologías
                         de Gestión de Proyectos</h4>
                 </div>
                 <div class="card-body text-center">
                     <p class="card-text">Modelo agile</p>
-                    <a href="https://scrumguides.org/docs/scrumguide/v2020/2020-Scrum-Guide-Spanish-European.pdf" target="_blank"
-                     class="btn btn-success">Ver documento</a>
+                    <a href="https://www.dtagency.tech/cursos/metodologias_gestion_proyectos/tema_2-ModeloAgile.pdf"
+                        target="_blank" class="btn btn-success">Ver documento</a>
                 </div>
                 <div class="card-footer text-body-secondary">
                     <span id="footer-card-go-over">Fecha de publicación: 2018</span>
