--- a/src/app/homepage/components/homepage/homepage.component.html
+++ b/src/app/homepage/components/homepage/homepage.component.html
@@ -15,7 +15,7 @@
                 <a id="nav-link-go-over" class="nav-link text-dark efect-btn" [routerLink]="['/go-over']"
                     routerLinkActive="active" [hidden]="thereIsAdminEmail">
                     <i id="i-go-over" class="fs-5 fa-solid fa-book-bookmark sizing-icons"></i><span
-                        class="fs-5 ms-3 d-none d-sm-inline hidden">Documentos de interes</span>
+                        class="fs-5 ms-3 d-none d-sm-inline hidden">Documentos de interés</span>
                 </a>
             </li>
             <li class="nav-item py-2 py-sm-0 dropdown open pb-3">
@@ -39,7 +39,7 @@
             <li (click)="logOut()" class="nav-item py-2 py-sm-0">
                 <a id="nav-link-ranking" class="nav-link text-dark efect-btn">
                     <i id="i-ranking" class="fa-solid fa-right-from-bracket sizing-icons"></i><span
-                        class="fs-5 ms-3 d-none d-sm-inline hidden">Cerrar Sesion</span>
+                        class="fs-5 ms-3 d-none d-sm-inline hidden">Cerrar Sesión</span>
                 </a>
             </li>
         </ul>
