--- a/src/app/shared/components/achievements/achievements.component.html
+++ b/src/app/shared/components/achievements/achievements.component.html
@@ -1,33 +1,24 @@
 <ul class="list-group mod list-group-flush" style="background-color: transparent;" #listAchievements>
     <li class="list-group-item" [ariaDisabled]='logroSuccess'>
 
-        Listo para solucionar agilmente
-        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+        Listo para solucionar ágilmente
 
 
     </li>
-    <li class="list-group-item" [ariaDisabled]='logroSuccess'>¿Con cual me quedo?
-        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>¿Con cuál me quedo?
     </li>
-    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Decision tomada!!
-        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Decisión tomada!!        
     </li>
-    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Conociendo a scrummie
-        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Preparando las herramientas
     </li>
-    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Empezando con scrum
-        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Empezando con Scrum
     </li>
-    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Mi formacion o equipo conformado.
-        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Entendiendo el concepto
     </li>
-    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Armonia dentro del equipo
-        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Equipo conformado
     </li>
-    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Estratega
-        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Armonía dentro del equipo
     </li>
-    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Scrummie guru
-        <p [attr.hidden]='logroSuccess'>Conseguido</p>
+    <li class="list-group-item" [ariaDisabled]='logroSuccess'>Un paso más cerca de scrummie
     </li>
 </ul>
