--- a/src/app/shared/components/achievements/achievements.component.css
+++ b/src/app/shared/components/achievements/achievements.component.css
@@ -30,6 +30,7 @@ li.active{
     /* border: none; */
     border-bottom: transparent;
     margin-bottom: 3px;
+    border-top-width: 0!important;
 }
 
 li{
